--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>t</groupId>
-    <artifactId>t</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>SurgePickaxes</groupId>
+    <artifactId>SurgePickaxes</artifactId>
+    <version>1.0</version>
     <packaging>jar</packaging>
 
     <name>SurgePickaxes</name>
@@ -23,8 +23,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -72,8 +72,15 @@
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.12.10</version>
+            <artifactId>mongodb-driver-sync</artifactId>
+            <version>3.12.12</version>
+        </dependency>
+        <dependency>
+            <groupId>headb</groupId>
+            <artifactId>no</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/HeadDB.jar</systemPath>
         </dependency>
 
     </dependencies>
