--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,10 @@
             <id>sonatype</id>
             <url>https://oss.sonatype.org/content/groups/public/</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -75,12 +79,17 @@
             <artifactId>mongodb-driver-sync</artifactId>
             <version>3.12.12</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>headb</groupId>-->
+<!--            <artifactId>no</artifactId>-->
+<!--            <version>1.0</version>-->
+<!--            <scope>system</scope>-->
+<!--            <systemPath>${project.basedir}/src/main/resources/HeadDB.jar</systemPath>-->
+<!--        </dependency>-->
         <dependency>
-            <groupId>headb</groupId>
-            <artifactId>no</artifactId>
-            <version>1.0</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/resources/HeadDB.jar</systemPath>
+            <groupId>com.github.SkySurge-Network</groupId>
+            <artifactId>Core</artifactId>
+            <version>db181971f9</version>
         </dependency>
 
     </dependencies>
